[gd_scene load_steps=6 format=3 uid="uid://c3bh4bbr05btb"]

[ext_resource type="Script" path="res://autoload/achievements/achievements.gd" id="1_mn3rh"]
[ext_resource type="Texture2D" uid="uid://1uojxvmkq6f" path="res://icon.svg" id="2_bn2kj"]

[sub_resource type="Animation" id="Animation_ixyn2"]
resource_name = "OnUnlockAchievement"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AchieveTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AchieveTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(859, 1082), Vector2(859, 771)]
}

[sub_resource type="Animation" id="Animation_kfy60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AchieveTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AchieveTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(856.5, 994)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mjynw"]
_data = {
"OnUnlockAchievement": SubResource("Animation_ixyn2"),
"RESET": SubResource("Animation_kfy60")
}

[node name="Achievements" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mn3rh")

[node name="AchieveTitle" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -86.0
offset_right = 103.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
text = "UNLOCKED ACHIEVEMENT:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AchieveTexture" type="TextureRect" parent="AchieveTitle"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = 25.0
offset_right = 64.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bn2kj")
expand_mode = 2

[node name="AchieveDesc" type="Label" parent="AchieveTitle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -209.5
offset_top = 178.0
offset_right = 219.5
offset_bottom = 370.0
grow_horizontal = 2
text = "desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc "
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mjynw")
}
